Milestone 2 - Tally Communication Layer
